@@ -5,6 +5,7 @@ NEXT (1.30?)
 [FIXES]
 *   Overhauled how tainting was done.  Stole code directly from
     Test::Taint.
+*   Have LWP only handle decoding of Content-Encoding, not charset.
 
 
 1.27_01     Wed May 16 14:21:29 CDT 2007
